# motor_project

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile_core_lib_docs  Doxyfile_firmware_gpio_lib_docs  LICENSE  README.md  cmake_install.cmake  index.html
.github/workflows/: ci.yaml
cmake/: DoxygenUtilities.cmake  Utilities.cmake  arm-gcc-toolchain.cmake
docs/: CMakeLists.txt  index.html.in  style.css
firmware/blink/: CMakeLists.txt  arm-gcc-toolchain.cmake
firmware/blink/linker/: STM32F091RCTX_FLASH.ld
firmware/blink/src/: main.c
firmware/lib/gpio/: CMakeLists.txt
firmware/lib/gpio/html/: annotated.html  classes.html  dir_000004_000002.html  dir_4e5a1d0e4c7de500f8af3542a5a22243.html  dir_4e5a1d0e4c7de500f8af3542a5a22243_dep.map  dir_4e5a1d0e4c7de500f8af3542a5a22243_dep.md5  dir_641e33ed0066b5673ae747a7f52f3ab9.html  dir_641e33ed0066b5673ae747a7f52f3ab9_dep.map  dir_641e33ed0066b5673ae747a7f52f3ab9_dep.md5  dir_8ab6e35acb4e89193d20b9deaf4b2259.html  dir_8ab6e35acb4e89193d20b9deaf4b2259_dep.map  dir_8ab6e35acb4e89193d20b9deaf4b2259_dep.md5  dir_d9edf6c004b4a7ff14fe9ae7a92214ee.html  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.map  dir_d9edf6c004b4a7ff14fe9ae7a92214ee_dep.md5  dir_edfbbaae5f6cfdb3fa9a374951644f24.html  dir_edfbbaae5f6cfdb3fa9a374951644f24_dep.map  dir_edfbbaae5f6cfdb3fa9a374951644f24_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  gpio_8c.html  gpio_8c__incl.map  gpio_8c__incl.md5  gpio_8h.html  gpio_8h__dep__incl.map  gpio_8h__dep__incl.md5  gpio_8h__incl.map  gpio_8h__incl.md5  gpio_8h_source.html  graph_legend.html  index.html  structGpio-members.html  structGpio.html
firmware/lib/gpio/html/search/: all_0.js  all_1.js  classes_0.js  functions_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js
firmware/lib/gpio/include/: gpio.h
firmware/lib/gpio/src/: gpio.c
lib/core/: CMakeLists.txt
lib/core/html/: annotated.html  classTypes_1_1Status-members.html  classTypes_1_1Status.html  classes.html  dir_0146da0ba043a5381a5bcddcb9a72821.html  dir_0146da0ba043a5381a5bcddcb9a72821_dep.map  dir_0146da0ba043a5381a5bcddcb9a72821_dep.md5  dir_3e38c34e8129f1b360668a25fb5a98ce.html  dir_3e38c34e8129f1b360668a25fb5a98ce_dep.map  dir_3e38c34e8129f1b360668a25fb5a98ce_dep.md5  dir_8762664f12dea4e4fd08ac69cea8bcf2.html  dir_8762664f12dea4e4fd08ac69cea8bcf2_dep.map  dir_8762664f12dea4e4fd08ac69cea8bcf2_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a2d5e495f4b604d04f57d90095a59dd6.html  dir_a2d5e495f4b604d04f57d90095a59dd6_dep.map  dir_a2d5e495f4b604d04f57d90095a59dd6_dep.md5  files.html  functions.html  functions_enum.html  functions_func.html  graph_legend.html  index.html  menudata.js  namespaceTypes.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  status_8hpp.html  status_8hpp__incl.map  status_8hpp__incl.md5  status_8hpp_source.html
lib/core/html/search/: all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
lib/core/types/: CMakeLists.txt
lib/core/types/include/types/: status.hpp
lib/types/include/types/: status.hpp
scripts/: build.sh  run.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/types/: CMakeLists.txt  test_status.cpp
tests/types/: CMakeLists.txt
